// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coupon should render with checkmark 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Coupon
    fill="#abcdef"
    hasCheckmark={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z"
          fill="#abcdef"
        />,
        <Rect
          fill="#abcdef"
          height="2.5"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="9"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="29.8"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="22.1"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="14.4"
        />,
        <Rect
          fill="#abcdef"
          height="2.5"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="37.5"
        />,
        <Polygon
          fill="#abcdef"
          points="26,26.7 21.3,22 19.2,24.2 26,31 35.8,21.2 33.7,19.1 "
        />,
      ],
      "height": 21.5,
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 73 43",
      "width": 36.5,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z",
          "fill": "#abcdef",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "2.5",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "9",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "29.8",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "22.1",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "14.4",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "2.5",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "37.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "points": "26,26.7 21.3,22 19.2,24.2 26,31 35.8,21.2 33.7,19.1 ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z"
            fill="#abcdef"
          />,
          <Rect
            fill="#abcdef"
            height="2.5"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="9"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="29.8"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="22.1"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="14.4"
          />,
          <Rect
            fill="#abcdef"
            height="2.5"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="37.5"
          />,
          <Polygon
            fill="#abcdef"
            points="26,26.7 21.3,22 19.2,24.2 26,31 35.8,21.2 33.7,19.1 "
          />,
        ],
        "height": 21.5,
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 73 43",
        "width": 36.5,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z",
            "fill": "#abcdef",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "2.5",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "9",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "29.8",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "22.1",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "14.4",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "2.5",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "37.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "points": "26,26.7 21.3,22 19.2,24.2 26,31 35.8,21.2 33.7,19.1 ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Coupon should render without checkmark 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Coupon
    fill="#abcdef"
    hasCheckmark={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z"
          fill="#abcdef"
        />,
        <Rect
          fill="#abcdef"
          height="2.5"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="9"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="29.8"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="22.1"
        />,
        <Rect
          fill="#abcdef"
          height="4.8"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="14.4"
        />,
        <Rect
          fill="#abcdef"
          height="2.5"
          rx={0}
          ry={0}
          width="3"
          x="52"
          y="37.5"
        />,
        null,
      ],
      "height": 21.5,
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 73 43",
      "width": 36.5,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z",
          "fill": "#abcdef",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "2.5",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "9",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "29.8",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "22.1",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "4.8",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "14.4",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#abcdef",
          "height": "2.5",
          "rx": 0,
          "ry": 0,
          "width": "3",
          "x": "52",
          "y": "37.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z"
            fill="#abcdef"
          />,
          <Rect
            fill="#abcdef"
            height="2.5"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="9"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="29.8"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="22.1"
          />,
          <Rect
            fill="#abcdef"
            height="4.8"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="14.4"
          />,
          <Rect
            fill="#abcdef"
            height="2.5"
            rx={0}
            ry={0}
            width="3"
            x="52"
            y="37.5"
          />,
          null,
        ],
        "height": 21.5,
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 73 43",
        "width": 36.5,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M71.5,14H73V0H10v6H0v14h1.5C4,20,6,22,6,24.5S4,29,1.5,29H0v14h67v-6h6V23h-1.5C69,23,67,21,67,18.5S69,14,71.5,14z M64,40H3v-8.2c3.4-0.7,6-3.7,6-7.3s-2.6-6.7-6-7.3V9h61v8.2c-3.4,0.7-6,3.7-6,7.3s2.6,6.7,6,7.3V40z M70,25.8V34h-3v-5h-1.5C63,29,61,27,61,24.5c0-2,1.4-3.7,3.2-4.3C64.9,23,67.1,25.3,70,25.8z M27,6V3h-3v3H13V3h57v8.2c-1.1,0.2-2.1,0.7-3,1.4V6H27z",
            "fill": "#abcdef",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "2.5",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "9",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "29.8",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "22.1",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "4.8",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "14.4",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#abcdef",
            "height": "2.5",
            "rx": 0,
            "ry": 0,
            "width": "3",
            "x": "52",
            "y": "37.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
